<resources>
    <string name="app_name">Les amis du Remel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDd8F1y14QmSEDPTsVxGOkURhpsQ-nMb0c</string>
    <string name="server_client_id">451452049112-s52lqnaim6827gucla463h0l9mbr5e9o.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1766005430162080</string>
    <string name="fb_login_protocol_scheme">fb1766005430162080</string>

    <string name="title_activity_maps">Map</string>
    <string name="descritipn">Description</string>
    <string name="easy">Easy</string>
    <string name="difficult_du_circuit">Difficulté du circuit</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="titre">Titre</string>
    <string name="une_bref_description">Une bref description </string>
    <string name="un_titre_pour_ce_circuit">Un titre pour ce circuit</string>
    <string name="ajouter_spot">Ajouter un Spot au circuit </string>
    <string name="experience_randonneur">Trouvez ou partager votre propore experience de randonneur</string>
    <string name="title_activity_base_drawer_activity">Base_drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="records_personel">Records personel</string>
    <string name="recommend_pour_vous">Recommendé pour vous:</string>
    <string name="association_description_2">L\'association est active depuis 2005 lorem ispum lorem ispum lorem ispum   lorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispumlorem ispum lorem ispum lorem ispum </string>

    <string name="association_description">L\'association les amis du Remel a pour but de preserver le patrimoin écologique de la forêt et des plages. </string>
    <string name="app_context"> La forêt du Rimel est forêt ou il y\'a principalement des arbres de pin, avec une forte concentration de porc et une finalement une vu imprenable sur la mer médiraniéen. </string>
    <string name="title_activity_faune__flore_detail_">Faune_Flore_detail_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="map_key">pk.eyJ1Ijoic29maWVuc2FobGkiLCJhIjoiY2tmMm5reGtxMDBudjJxcXMwcXZ0Zzl3MSJ9.Zlh9CU1KS75wNiHyzyUgwQ</string>
    <array name="event_categories">
        <item>
            <string> Santé et bien être </string>
        </item>
        <item>
            <string> Culturel</string>
        </item>
        <item>
            <string> Preservation du patrimoine</string>
        </item>
    </array>

</resources>
