<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_circuit_background_form"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="5dp"
        android:gravity="end"
        android:textAlignment="center"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:title="Nouveau circuit"
        map:titleTextColor="@color/colorWhite"

        >

        <ImageButton
            android:id="@+id/ibDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:padding="5dp"
            android:src="@drawable/ic_add_done"
            android:tint="@color/colorWhite" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:alpha=".8"
                android:paddingTop="4dp"
                android:text="@string/un_titre_pour_ce_circuit"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColorHint="@color/colorWhite"
                android:visibility="visible"
                map:hintAnimationEnabled="true"
                map:hintTextAppearance="@font/alegreya">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvcircuitTitre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/titre"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"

                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:alpha=".8"
                android:paddingTop="4dp"
                android:text="@string/difficult_du_circuit"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"

                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/icon_hard_difficulty"
                    android:tint="@color/colorWhite"
                    map:layout_constraintBottom_toBottomOf="@+id/tvDifficulty"
                    map:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icon_easy_diffuclty"
                    android:tint="@color/colorWhite"
                    map:layout_constraintBottom_toBottomOf="@+id/tvDifficulty"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="@+id/tvDifficulty" />


                <SeekBar

                    android:id="@+id/tvDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginEnd="80dp"
                    android:layout_marginStart="80dp"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintEnd_toStartOf="@+id/imageView8"
                    map:layout_constraintStart_toEndOf="@+id/imageView7"
                    map:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:alpha=".7"
                    android:paddingTop="4dp"
                    android:text="facile"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toBottomOf="@+id/tvDifficulty" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:alpha=".7"
                    android:paddingTop="4dp"
                    android:text="Difficile"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintTop_toBottomOf="@+id/tvDifficulty" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button

                android:id="@+id/select_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/colorWhite"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_timer"
                android:drawableTint="@color/bleu"
                android:paddingStart="5dp"
                android:text="Temps estimée"
                android:textAllCaps="false"
                android:textColor="@color/bleu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:alpha=".8"
                android:paddingTop="4dp"
                android:text="@string/une_bref_description"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite"
                android:visibility="visible"
                map:hintAnimationEnabled="true"
                map:hintTextAppearance="@font/alegreya">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/descritipn"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    android:theme="@style/AppTheme">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addSpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"

                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/ic_add_location"
                android:drawableTint="@color/bleu"
                android:padding="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/ajouter_spot"
                android:textAllCaps="false"
                android:textColor="@color/bleu"

                />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/spotsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>